<resources>
    <string name="app_name">Sample Room Database App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Your Information</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fab_add_edit">Add or Edit FAB</string>
    <string name="input_name_label_text">Name</string>
    <string name="input_email_label_text">Email Address</string>
    <string name="input_mobile_label_text">Mobile Number</string>
    <string name="input_save_btn_text">Save</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">someone@example.com</string>
    <string name="hint_mobile">1234567890</string>
    <string name="hint_dob">DD/MM/YYYY</string>
    <string name="input_title_text">Enter Your Details</string>
    <string name="detail_name_label_text">Name: </string>
    <string name="detail_email_label_text">Email:</string>
    <string name="detail_mobile_label_text">Mobile:</string>
    <string name="detail_title_text">User Found</string>
    <string name="detail_go_back_btn_text">Back</string>
    <string name="input_error_text">Fill all the details</string>
    <string name="detail_empty_text">Nothing to search!</string>
    <string name="detail_search_true_text">Search to Get Information</string>
    <string name="input_dob_label_text">Date of Birth</string>
    <string name="input_date_text"><u>%s</u></string>
    <string name="input_date_pick_btn_desc">Button to select date</string>
    <string name="input_cancel_btn_text">Cancel</string>
    <string name="search_hint_label">User ID</string>
    <string name="search_not_found_text">Not Found!</string>
    <string name="search_invalid_query_text">Input Correct ID</string>
    <string name="search_empty_query_text">ID can not be blank</string>
    <string name="search_btn_text">Search</string>
    <string name="input_id_label_text">User ID</string>
    <string name="hint_id">123</string>
</resources>