<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_box_edit_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/search_hint_label"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_box_edit_text"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/search_btn_text"
            app:layout_constraintBottom_toBottomOf="@+id/search_box_edit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_box_edit_layout" />

        <TextView
            android:id="@+id/search_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:fontFamily="serif"
            android:gravity="start|fill_vertical"
            android:text="@string/search_not_found_text"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_error_outline_24"
            app:drawableTint="#FF0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_box_edit_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_error_text_view">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/detail_title_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/data_layout" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_title"
                tools:text="Some Name" />

            <TextView
                android:id="@+id/detail_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_perm_identity_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name"
                tools:text="123" />

            <TextView
                android:id="@+id/detail_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_email_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_id"
                tools:text="someone@example.com" />

            <TextView
                android:id="@+id/detail_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_phone_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_email"
                tools:text="1234567890" />

            <TextView
                android:id="@+id/detail_dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_cake_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_mobile"
                tools:text="Jan 01, 1999" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/data_recycler_view"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            tools:itemCount="8"-->
        <!--            tools:listitem="@layout/list_item" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/homeEmptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:fontFamily="serif"
        android:padding="4dp"
        android:text="@string/detail_empty_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:drawableTint="@color/design_default_color_primary"
        app:drawableTopCompat="@drawable/ic_error_outline_64" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fab_add_edit"
        app:srcCompat="@drawable/ic_add_48" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>